# MapReduce

./: CMakeLists.txt  README.md
include/: ConQueue.hpp  DoMap.hpp  DoReduce.hpp  Reader.hpp  commons.hpp  con-queue.hpp  do-map.hpp  do-reduce.hpp  error.hpp  map-reduce-user.hpp  map_reduce_functions.hpp  reader.hpp  timer.hpp
src/: do-map.cpp  do-reduce.cpp  error.cpp  main.cpp  map.cpp  reader.cpp  reduce.cpp  timer.cpp
test/: CMakeLists.txt  map_reduce_simple_sort.json  map_reduce_test_words.json  random_num.py  reader_test0.json  reader_test1.json  reader_test2.json  reader_test3.json  sort.cpp  test_map.cpp  test_reader.cpp  test_reduce.cpp  word_count.cpp  word_count_simple.json
